cmake_minimum_required(VERSION 3.29)
project(llfc_cpp_study)

set(CMAKE_CXX_STANDARD 20)

add_executable(llfc_cpp_study main.cpp)

add_subdirectory(01_var_output)
add_subdirectory(02_scope_space)
add_subdirectory(03_header_source)
add_subdirectory(04_extern)
add_subdirectory(05_reference_type)
add_subdirectory(06_pointer_type)
add_subdirectory(07_const)
add_subdirectory(08_auto_alias)
add_subdirectory(09_struct)
add_subdirectory(09_struct_example)
add_subdirectory(10_namespace)
add_subdirectory(11_string)
add_subdirectory(12_vector)
add_subdirectory(13_iterator)
add_subdirectory(14_array)
add_subdirectory(15_multi_array)
add_subdirectory(16_operator)
add_subdirectory(17_statement_scope)
add_subdirectory(18_function)
add_subdirectory(19_class)
add_subdirectory(20_inherit_polymorphism)
add_subdirectory(20_inherit_polymorphism_example)
add_subdirectory(21_interview_questions)
add_subdirectory(22_memory)
add_subdirectory(23_smart_pointer)
add_subdirectory(24_callable_function)
add_subdirectory(25_stl)
add_subdirectory(99_001_algorithm)
add_subdirectory(99_002_singleton)